<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<ImageView
			android:id="@+id/big_image"
			android:contentDescription="@string/first_image"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/icon"
			android:background="@drawable/ic_launcher_background"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_margin="@dimen/min_margin"
			android:padding="@dimen/min_margin"
	/>

	<TextView
			android:id="@+id/big_textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/my_super_title"
			app:layout_constraintLeft_toRightOf="@id/big_image"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_margin="@dimen/min_margin"
			android:textSize="20sp"
			android:textStyle="bold"
	/>

	<TextView
			android:id="@+id/small_text"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintTop_toBottomOf="@id/big_textView"
			app:layout_constraintLeft_toRightOf="@id/big_image"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintBottom_toBottomOf="@id/big_image"
			android:layout_marginLeft="@dimen/min_margin"
			android:layout_marginRight="@dimen/min_margin"
			android:text="@string/long_staff"
			android:lines="4"
			android:ellipsize="end"
	/>

	<View
			android:id="@+id/divider"
			android:contentDescription="@string/divider"
			android:layout_width="match_parent"
	        android:layout_height="2dp"
			app:layout_constraintTop_toBottomOf="@+id/small_text"
			android:layout_marginTop="@dimen/min_margin"
			android:layout_marginBottom="@dimen/min_margin"
			android:background="#777777"
	/>

	<ImageView
			android:id="@+id/small_image_1"
			android:contentDescription="@string/small_image"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="@dimen/min_margin"
			app:layout_constraintTop_toBottomOf="@id/divider"
			app:layout_constraintLeft_toLeftOf="parent"
			android:src="@drawable/icon"
			android:background="@drawable/ic_launcher_background"
			android:padding="@dimen/min_margin"
	/>

	<ImageView
			android:id="@+id/small_image_2"
			android:contentDescription="@string/small_image"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="@dimen/min_margin"
			app:layout_constraintLeft_toRightOf="@id/small_image_1"
			app:layout_constraintTop_toBottomOf="@id/divider"
			android:src="@drawable/icon"
			android:background="@drawable/ic_launcher_background"
			android:padding="@dimen/min_margin"
	/>

	<ImageView
			android:id="@+id/small_image_3"
			android:contentDescription="@string/small_image"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="@dimen/min_margin"
			app:layout_constraintTop_toBottomOf="@id/small_image_1"
			app:layout_constraintLeft_toLeftOf="@id/small_image_1"
			app:layout_constraintRight_toRightOf="@id/small_image_2"
			android:src="@drawable/icon"
			android:background="@drawable/ic_launcher_background"
			android:padding="@dimen/min_margin"
	/>

	<TextView
			android:id="@+id/magic_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/min_margin"
			app:layout_constraintLeft_toRightOf="@id/small_image_2"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/divider"
			app:layout_constraintBottom_toBottomOf="@id/small_image_3"
			android:text="@string/magic_images"
			android:textAlignment="center"
	/>

	<Button
			android:id="@+id/text_like_button"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/text_like_button"
			android:textAlignment="center"
			android:layout_margin="@dimen/min_margin"
	/>
</android.support.constraint.ConstraintLayout>